# beandb

./: Cargo.toml  README.md
src/: main.rs
src/database/: db.rs
src/handlers/: beans.rs  home.rs  mod.rs
src/models/: beans.rs  mod.rs
static/: style.css
templates/: about.html  beans_add.html  beans_overview.html  landing.html
